cmake_minimum_required(VERSION 3.10)
project(principles___practice_using_C____2nd_Edition_)

set(CMAKE_CXX_STANDARD 14)

add_executable(2.1_hello_world 2.1_hello_world.cpp)
add_executable(3.1_input 3.1_input.cpp)
add_executable(3.1_try_this 3.1_try_this.cpp)
add_executable(3.3_input_and_type 3.3_input_and_type.cpp)
add_executable(3.4_operations_and_operators 3.4_operations_and_operators.cpp)
add_executable(3_drill 3_drill.cpp)
add_executable(3.5_assignment_and_initialization 3.5_assignment_and_initialization.cpp)
add_executable(3.6_composite_assignment_operators 3.6_composite_assignment_operators.cpp)
add_executable(3.9.2_unsafe_conversions 3.9.2_unsafe_conversions.cpp)
add_executable(4.3_expressions 4.3_expressions.cpp)
add_executable(4.4.1_selection 4.4.1_selection.cpp)
add_executable(4.4.1.2_switch_statements 4.4.1.2_switch_statements.cpp)
add_executable(4.4.2.1_while_statements 4.4.2.1_while_statements.cpp)
add_executable(4.4.2.1_while_statements_character_map 4.4.2.1_while_statements_character_map.cpp)
add_executable(4.5.1_why_bother_with_functions 4.5.1_why_bother_with_functions.cpp)
add_executable(4.6.1_traversing_a_vector 4.6.1_traversing_a_vector.cpp)
add_executable(4.6.3_numeric_vector_example 4.6.3_numeric_vector_example.cpp)
add_executable(4.6.3_text_vector_example 4.6.3_text_vector_example.cpp)
add_executable(4.6.3_try_this_bleep 4.6.3_try_this_bleep.cpp)
add_executable(4_ex01 4_drill.cpp)